fix: fade overlaps nav bottom-margin

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -12,7 +12,7 @@ nav {
 nav::after {
   content: "";
   position: absolute;
-  top: 61px;
+  top: 66.25px;
   height: 110px;
   width: 100%;
   background: linear-gradient(black, transparent);
